--- a/DatabaseOperation/web/print.xhtml
+++ b/DatabaseOperation/web/print.xhtml
@@ -13,7 +13,7 @@
 <p:panelGrid columns="2">
 
 	<h:form id="showTree1">
-		<p:tree value="#{compare.tree1.root}" var="node1" id="tree1"
+		<p:tree value="#{compare.frame.tree1.root}" var="node1" id="tree1"
 			animate="true">
 			<p:treeNode id="treeNode">
 				<h:outputText value="#{node1}" id="lblNode1" />
@@ -22,7 +22,7 @@
 	</h:form>
 
 	<h:form id="showTree2">
-		<p:tree value="#{compare.tree2.root}" var="node2" id="tree2"
+		<p:tree value="#{compare.frame.tree2.root}" var="node2" id="tree2"
 			animate="true">
 			<p:treeNode id="treeNode">
 				<h:outputText value="#{node2}" id="lblNode2" />
@@ -31,10 +31,6 @@
 	</h:form>
 
 </p:panelGrid>
-
-	<h:outputText value="Test Result: " />
-	<br />
-	<h:outputText value="#{compare.compareFiles()}" />
 
 
 </h:body>
