--- a/DatabaseOperation/web/print.xhtml
+++ b/DatabaseOperation/web/print.xhtml
@@ -10,6 +10,8 @@
 
 <h:body>
 
+<h:outputText style="font-size:16; font-weight:bold;"  
+                            value="#{compare.directory}" /> 
 <p:panelGrid columns="2">
 
 	<h:form id="showTree1">
@@ -31,6 +33,8 @@
 	</h:form>
 
 </p:panelGrid>
+
+
 
 
 </h:body>
