--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -236,6 +236,7 @@ function canceldown(){
             	sizeLimit="100000" 
             	allowTypes="/(\.|\/)(zip)$/" 
             	style="border:none"
+            	required="true"
             	/>
 
             <p:growl showDetail="true"/>  
