--- a/DatabaseOperation/web/register.xhtml
+++ b/DatabaseOperation/web/register.xhtml
@@ -111,17 +111,22 @@
     	    <br /><br />
 		
             <h:outputLabel value="User Name"></h:outputLabel>
-        	<p:inputText id="username" value="#{register.username}" required="true" requiredMessage="Username is required" styleClass="name"/>
+        	<p:inputText id="username" value="#{register.username}" title="Enter Your Username" required="true" requiredMessage="Username is required" styleClass="name"/>
+        	<p:tooltip for="username" showEvent="focus" hideEvent="blur" />   
         	<h:message for="username" />
         	<br /><br />
         	<h:outputLabel value="Password"></h:outputLabel>
-        	<p:password id="password" value="#{register.password}" required="true" requiredMessage="Password is required" styleClass="pass"/>
+        	<p:password id="password" value="#{register.password}" title="Enter Your Password" required="true" requiredMessage="Password is required" validatorMessage="The length of password should be at least 6 chars!!" styleClass="pass">
+        	<p:tooltip for="password" showEvent="focus" hideEvent="blur" />
+        	<f:validateLength minimum="6" for="password"></f:validateLength>
+        	</p:password>
         	<h:message for="password" />
         	<br /><br />
         	
         	<h:outputLabel value="Re-enter "></h:outputLabel>
-        	<p:password id="repassword" value="#{register.password}" required="true" requiredMessage="Re-enter password please is required" validatorMessage="The length of password should be at least 6 chars!!" styleClass="repass">
-        	<f:validateLength minimum="6" for="password"></f:validateLength>
+        	<p:password id="repassword" value="#{register.password}" title="Re-enter Your Password" required="true" requiredMessage="Re-enter password please is required" validatorMessage="The length of password should be at least 6 chars!!" styleClass="repass">
+        	<p:tooltip for="repassword" showEvent="focus" hideEvent="blur" />
+        	<f:validateLength minimum="6" for="repassword"></f:validateLength>
         	</p:password>
         	<h:message for="repassword" />
         	<br /><br />
