change admin view background
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/assignmentsDisplay.xhtml
+++ b/DatabaseOperation/web/assignmentsDisplay.xhtml
@@ -16,7 +16,7 @@
   			}
   			
   			.mainFrame{
-  			    background-image: url(images/adminbg.png);
+  			    background-image: url(images/admin_view.png);
                 background-position:center;
                 background-size:cover;
                 background-repeat:no-repeat; 
