--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -242,11 +242,11 @@ function canceldown(){
             <p:growl showDetail="true"/>  
 			</p:outputPanel>
 			
-			<p:outputPanel layout="block" style="position:absolute;top:150px;left:75px">
-			<h:commandButton type="submit" onmouseover="this.src ='images/compare_s1.png'" onmouseout="this.src='images/compare_s0.png'" onmousedown="this.src='images/compare_s2.png'" action="#{compare.tempUpload(login.username,assignment.selectedAssignment.assignmentDirectory, assignment.selectedAssignment.assignmentID)}" image="/images/compare_s0.png" />
+			<p:outputPanel layout="block" style="position:absolute;top:180px;left:75px">
+			<h:commandButton type="submit" onmouseover="this.src ='images/upload_s1.png'" onmouseout="this.src='images/upload_s0.png'" onmousedown="this.src='images/upload_s2.png'" action="#{compare.tempUpload(login.username,assignment.selectedAssignment.assignmentDirectory, assignment.selectedAssignment.assignmentID)}" image="/images/upload_s0.png" />
 			</p:outputPanel>
 			
-			<p:outputPanel layout="block" style="position:absolute;top:150px;right:59px">
+			<p:outputPanel layout="block" style="position:absolute;top:180px;right:59px">
 			<h:commandButton type="button" onmouseover="this.src ='images/cancel_s1.png'" onmouseout="this.src='images/cancel_s0.png'" onmousedown="this.src='images/cancel_s2.png'"  image="/images/cancel_s0.png" onclick="updateUI.hide()" />
 			</p:outputPanel>
 			
