add retina support for login and adminlogin page
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/adminLogin.xhtml
+++ b/DatabaseOperation/web/adminLogin.xhtml
@@ -6,9 +6,9 @@
 
 <h:head>
 
-<!-- <link href="css/adminLogin.css" rel="stylesheet" type="text/css" /> -->
-<link rel="stylesheet/less" type="text/css" href="adminLogin.less" ></link>
-     <script src="js/retina.js" type="text/javascript"></script>
+
+<link rel="stylesheet/less" type="text/css" href="css/adminLogin.less" ></link>
+    
 <script src="js/less.js" type="text/javascript"></script>
 </h:head>
 
