--- a/DatabaseOperation/web/loginErr1.xhtml
+++ b/DatabaseOperation/web/loginErr1.xhtml
@@ -5,8 +5,9 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-<link href="css/loginErr.css" rel="stylesheet" type="text/css" />
-	
+<link rel="stylesheet/less" type="text/css" href="css/loginErr.less" ></link>
+    
+<script src="js/less.js" type="text/javascript"></script>
 
 </h:head>
 
