--- a/DatabaseOperation/web/loginErr2.xhtml
+++ b/DatabaseOperation/web/loginErr2.xhtml
@@ -6,7 +6,11 @@
 
 <h:head>
 
-<link href="css/loginErr.css" rel="stylesheet" type="text/css" />
+
+<link rel="stylesheet/less" type="text/css" href="css/loginErr.less" ></link>
+    
+<script src="js/less.js" type="text/javascript"></script>
+
 
 </h:head>
 
