--- a/DatabaseOperation/web/print.xhtml
+++ b/DatabaseOperation/web/print.xhtml
@@ -96,7 +96,7 @@
 .result_status_content{
 		float:left;
 	 width:622px;
-	 height:87px;
+	 height:187px
 	 overflow:auto;
 	 background-image:url(images/result_status_content.png);
 	  background-repeat:repeat-y;
@@ -187,6 +187,9 @@ color:#3C3;
 
 <h:body>
 
+<h:form>
+<h:commandButton value="Back to Block View" action="blockPrint.xhtml"></h:commandButton>
+</h:form>
 <p:outputPanel layout="block" styleClass="container">
 
 <p:outputPanel layout="block" styleClass="top"></p:outputPanel>
