--- a/DatabaseOperation/web/print.xhtml
+++ b/DatabaseOperation/web/print.xhtml
@@ -41,6 +41,12 @@
 				margin-right:100px;	
 		}
 		
+		.ui-tree{
+			width:380px;
+		}
+		
+		#showTree2{
+			width:380px;
 		}
 		
 		body {background-color:#e7efcd;}
