select term year, add point rating

--- a/DatabaseOperation/web/adminLoginLoading.xhtml
+++ b/DatabaseOperation/web/adminLoginLoading.xhtml
@@ -11,7 +11,7 @@
 
 <h:form>
 
-<p:remoteCommand name="lazyload" action="#{assignment.getAssignmentList(menuoption.selectYear,menuoption.selectTerm)}" />
+<p:remoteCommand name="lazyload" action="#{assignment.getAssignmentList()}" />
 </h:form>
 
 
