Remove term and year from login and register

--- a/DatabaseOperation/web/login.xhtml
+++ b/DatabaseOperation/web/login.xhtml
@@ -57,7 +57,7 @@
         	</p:outputPanel>
         	
         	<p:outputPanel layout="block" styleClass="submit">
-        	<h:commandButton value="Login" type="submit" action="#{login.loginCheck(menuoption.selectYear,menuoption.selectTerm)}" image="/images/login_s0.png"  onmouseover="this.src ='images/login_s1.png'" onmouseout="this.src='images/login_s0.png'" onmousedown="this.src='images/login_s2.png'">
+        	<h:commandButton value="Login" type="submit" action="#{login.loginCheck()}" image="/images/login_s0.png"  onmouseover="this.src ='images/login_s1.png'" onmouseout="this.src='images/login_s0.png'" onmousedown="this.src='images/login_s2.png'">
         	</h:commandButton>
         	</p:outputPanel>
         	<p:outputPanel layout="block" styleClass="cancel">
