--- a/DatabaseOperation/web/register.xhtml
+++ b/DatabaseOperation/web/register.xhtml
@@ -54,7 +54,7 @@
         	<h:message for="repassword" />
         	<br /><br />
         	<p:outputPanel layout="block" styleClass="submit">
-        	<h:commandButton value="Register" action="#{register.addUser(menuoption.selectYear, menuoption.selectTerm)}" image="/images/register_s0.png" onmouseover="this.src ='images/register_s1.png'" onmouseout="this.src='images/register_s0.png'" onmousedown="this.src='images/register_s2.png'"/>
+        	<h:commandButton value="Register" action="#{register.addUser}" image="/images/register_s0.png" onmouseover="this.src ='images/register_s1.png'" onmouseout="this.src='images/register_s0.png'" onmousedown="this.src='images/register_s2.png'"/>
         	</p:outputPanel>
         	<p:outputPanel layout="block" styleClass="cancel">
         	<h:commandButton value="Cancel" type="reset" image="/images/cancel_s0.png" onmouseover="this.src ='images/cancel_s1.png'" onmouseout="this.src='images/cancel_s0.png'" onmousedown="this.src='images/cancel_s2.png'"/>
