--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -119,7 +119,7 @@ function canceldown(){
         <f:facet name="footer">  
              <p:commandButton id="v" value="Show Detail" icon="ui-icon-search" update=":dialog" oncomplete="dlg.show()"/> 
 			 <p:commandButton id="v1" value="Show Screenshot" update=":screenshot" oncomplete="lightbox.show()"/>
-             <p:commandLink id="v2" value="Show History" icon="ui-icon-search" update=":dlgSingleLogDisplay" oncomplete="dlgSingleLog.show()" action="#{gradestudentBean.getGradeStudentSingleEntry(gradestudentBean.selectedAssignment.assignmentID,login.username)}"/>
+             <p:commandLink id="v2" value="Show History" icon="ui-icon-search" update=":dlgSingleLogDisplay" oncomplete="dlgSingleLog.show()" />
              <p:commandButton id="v3" value="Compare" icon="ui-icon-search" update=":updateDialog" oncomplete="updateUI.show()"/>
         </f:facet>
     </p:dataTable>   
@@ -130,7 +130,7 @@ function canceldown(){
     
     
     <p:dialog  resizable="false" styleClass="table_showhistory" id="dlgSingleLogDisplay" widgetVar="dlgSingleLog" modal="true" draggable="false" width="500" height="400">  
-	<h:outputText value="#{gradestudentBean.currentSelect.log_directory}"/>
+	<h:outputText value="#{gradestudentBean.selectedAssignment.assignmentDirectory}"/>
 	</p:dialog>
 	
 	<p:dialog id="screenshot" widgetVar="lightbox">
