--- a/DatabaseOperation/web/loginLoading.xhtml
+++ b/DatabaseOperation/web/loginLoading.xhtml
@@ -11,7 +11,7 @@
 
 <h:form>
 
-<p:remoteCommand name="lazyload" action="#{gradestudentBean.getStudentAssignmentList(login.username,menuoption.selectYear,menuoption.selectTerm)}" />
+<p:remoteCommand name="lazyload" action="#{gradestudentBean.getStudentAssignmentList(login.username)}" />
 </h:form>
 
 
