Add all visible components into compare bean

--- a/DatabaseOperation/web/print.xhtml
+++ b/DatabaseOperation/web/print.xhtml
@@ -330,6 +330,54 @@ color:#3C3;
 				<h:outputText value="#{node2}"/>
 			</p:treeNode>
 			
+			<p:treeNode type="CheckBox" icon="button">
+				<h:outputText value="#{node2}"/>
+			</p:treeNode>
+			
+			<p:treeNode type="TextBox" icon="button">
+				<h:outputText value="#{node2}"/>
+			</p:treeNode>
+			
+			<p:treeNode type="PasswordTextBox" icon="button">
+				<h:outputText value="#{node2}"/>
+			</p:treeNode>
+			
+			<p:treeNode type="ListPicker" icon="button">
+				<h:outputText value="#{node2}"/>
+			</p:treeNode>
+			
+			<p:treeNode type="Image" icon="button">
+				<h:outputText value="#{node2}"/>
+			</p:treeNode>
+			
+			<p:treeNode type="ImagePicker" icon="button">
+				<h:outputText value="#{node2}"/>
+			</p:treeNode>
+			
+			<p:treeNode type="Canvas" icon="button">
+				<h:outputText value="#{node2}"/>
+			</p:treeNode>
+			
+			<p:treeNode type="EmailPicker" icon="button">
+				<h:outputText value="#{node2}"/>
+			</p:treeNode>
+			
+			<p:treeNode type="PhoneNumberPicker" icon="button">
+				<h:outputText value="#{node2}"/>
+			</p:treeNode>
+			
+			<p:treeNode type="ContactPicker" icon="button">
+				<h:outputText value="#{node2}"/>
+			</p:treeNode>
+			
+			<p:treeNode type="VideoPlayer" icon="button">
+				<h:outputText value="#{node2}"/>
+			</p:treeNode>
+			
+			<p:treeNode type="WebViewer" icon="button">
+				<h:outputText value="#{node2}"/>
+			</p:treeNode>
+			
 		</p:tree>
 		
 	</h:form>
